# rtools

./: .env  .gitignore  Cargo.toml  README-EN.md  README.md  run.sh  rustfmt.toml
.github/workflows/: github-action-ci-rtools.yml
backend/: Cargo.toml
backend/configs/: base.toml  log4rs.toml
backend/src/: configs.rs  lib.rs  main.rs  pre.rs
backend/src/app/: mod.rs  other.rs  work_time_calculator.rs
backend/src/common/: error.rs
backend/src/dbs/: mysql.rs
backend/src/gql/: mod.rs  mutations.rs  queries.rs
backend/src/security/: crypto.rs
backend/src/users/: mod.rs  models.rs  repository.rs  services.rs
backend/src/util/: constant.rs
frontend-handlebars/: Cargo.toml
frontend-handlebars/graphql/: all_projects.graphql
frontend-handlebars/src/: main.rs
frontend-handlebars/src/route/: index.rs  mod.rs  projects.rs  users.rs
frontend-handlebars/src/util/: common.rs  constant.rs  mod.rs
frontend-handlebars/templates/: index.html
frontend-yew/: Cargo.toml  cfg.toml  index.html
frontend-yew/src/: main.rs
frontend-yew/src/pages/: home.rs  projects.rs  users.rs
log/: log4rs.yaml
migrations/: 20221123112619_init.sql
src/: app.rs  main.rs
