[package]
authors = [ "fdc <fudongcheng110@foxmail.com>" ]
edition = "2021"
name    = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix-rt                = "2.7.0"
actix-web               = "4.2.1"
anyhow                  = "1.0.40"
async-graphql           = { version = "4.0.16", features = [ "apollo_tracing", "chrono", "log", "uuid" ] }
async-graphql-actix-web = "4.0.16"
async-trait             = "0.1.58"
chrono                  = { version = "0.4.19", features = [ "serde" ] }
config                  = "0.13.2"
dotenv                  = "0.15.0"
humantime               = "2.1.0"
humantime-serde         = "1.0.1"
jsonwebtoken            = "8.1.1"
lazy_static             = "1.4.0"
log                     = "0.4.17"
log4rs                  = "1.2.0"
regex                   = "1.5.3"
rust-argon2             = "1.0.0"
serde                   = { version = "1.0.147", features = [ "derive" ] }
serde-aux               = "4.1.0"
serde_json              = "1.0.88"
sqlx                    = { version = "0.6.2", features = [ "chrono", "macros", "postgres", "runtime-actix-native-tls", "uuid" ] }
thiserror               = "1.0.24"
uuid                    = { version = "1.2.2", features = [ "serde", "v4" ] }
validator               = { version = "0.16.0", features = [ "derive" ] }
