[package]
authors = [ "fdc <fudongcheng110@foxmail.com>" ]
edition = "2021"
name    = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix-rt                = "2.8.0"
actix-web               = "4.3.1"
anyhow                  = "1.0.70"
async-graphql           = { version = "5.0.6", features = [ "apollo_tracing", "chrono", "log", "uuid" ] }
async-graphql-actix-web = "5.0.6"
async-trait             = "0.1.67"
chrono                  = { version = "0.4.24", features = [ "serde" ] }
config                  = "0.13.3"
dotenv                  = "0.15.0"
humantime               = "2.1.0"
humantime-serde         = "1.1.1"
jsonwebtoken            = "8.3.0"
lazy_static             = "1.4.0"
log                     = "0.4.17"
log4rs                  = { version = "1.2.0", features = [ "toml_format" ] }
regex                   = "1.7.1"
rust-argon2             = "1.0.0"
serde                   = { version = "1.0.158", features = [ "derive" ] }
serde-aux               = "4.1.2"
serde_json              = "1.0.94"
sqlx                    = { version = "0.6.2", features = [ "chrono", "macros", "postgres", "runtime-actix-native-tls", "uuid" ] }
thiserror               = "1.0.40"
uuid                    = { version = "1.3.0", features = [ "serde", "v4" ] }
validator               = { version = "0.16.0", features = [ "derive" ] }
